--- a/signup_style.css
+++ b/signup_style.css
@@ -13,7 +13,7 @@ body {
   font-size: 1.5em;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("/Users/sanz/Documents/DALL.E/New Folder With Items/sanz_a_soccer_field_in_ghibli_studio_style_af55de7e-90b5-42a2-b046-cce5c888125d.png");
+  background-image: url("/Users/sanz/Documents/DALL.E/4/DALL·E 2022-09-09 00.15.46 -  a cyberpunk illustration of football ground in the outer space .png");
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", sans-serif;
   font-weight: 100;
   text-align: center;
