--- a/Manager.css
+++ b/Manager.css
@@ -9,7 +9,37 @@ body{
 }
 
 
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
 
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
 /* Make the image to responsive */
 .image {
   border-radius: 10px;
@@ -49,6 +79,7 @@ body{
 }
 
 .button {
+  
   box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
   border-radius: 16px;
   border: lightgray;
