--- a/Manager.css
+++ b/Manager.css
@@ -98,3 +98,4 @@ body{
 .button1 {background-color: #006A6A;margin-left: 10px;margin-top: 80px;} /* Green */
 .button2 {background-color: #006A6A;margin-left: 180px;margin-top: 80px;} /* Blue */
 .button3 {background-color: #006A6A;margin-left: 90px;margin-top: 120px;} /* Green */
+.button4 {background-color: #006A6A;margin-left: 10px;margin-top: 120px;} /* Green */
