--- a/create_player.css
+++ b/create_player.css
@@ -66,6 +66,7 @@ body{
   font-size: 20px;
   padding: 20px;
   text-align: center;
+  
 }
 
 /* When you mouse over the container, fade in the overlay title */
@@ -81,6 +82,8 @@ body{
   text-align:left: ;
   margin-left: 25px;
   font-size: 50px;
+  margin-top: 105px;
+  
 }
 input {
   align-content: center;
@@ -96,6 +99,7 @@ input {
 }
 .player{
   margin-left: 28px;
+   margin-bottom: 60px;
 
 }
 
