final working files

--- a/login_style.css
+++ b/login_style.css
@@ -36,7 +36,7 @@ body {
   color: #FFFFFF;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("/Users/sanz/Documents/DALL.E/3/DALL·E 2022-09-03 20.45.23 - a cyberpunk illustration of football ground in the outer space .png");
+  background-image: url("../DALL·E 2022-09-03 20.45.23 - a cyberpunk illustration of football ground in the outer space .png");
   overflow: hidden;
 }
 .box-form .left .overlay {
